# dm-ak-nano-mcuxpresso

./: .gitignore  README.md  SW-Content-Register.txt  aknano.c  aknano_client.c  aknano_client.h  aknano_device_gateway.c  aknano_el2go.c  aknano_flash_storage.c  aknano_image_download.c  aknano_net.c  aknano_pkcs11.c  aknano_priv.h  aknano_rest_api.c  aknano_secret.h  aknano_targets_manifest.c  aknano_tuf_client.c  app.h  aws_mqtt_starter.c  board.c  compile_epoch.h  flash_info.h  flash_partitioning.h  flexspi_flash_config.h  flexspi_nor_flash_ops.c  fsl_sss_ftr.h  image.h  libtufnano_config.h  lwipopts.h  main_enet.c  mcuboot_app_support.c  mcuboot_app_support.h  read_button_task.c
aknano/: aknano_device_gateway.c  aknano_el2go.c  aknano_flash_storage.c  aknano_pkcs11.c  aknano_priv.h  aknano_targets_manifest.c  aknano_tuf_client.c
aknano/provisioning/: aknano_provisioning.c
aknano/tests/: aknano_test.c  unity_config.h
armgcc/: CMakeLists.txt  MIMXRT1176xxxxx_cm7_flexspi_nor.ld  build_all.bat  build_all.sh  build_flexspi_nor_debug.bat  build_flexspi_nor_debug.sh  build_flexspi_nor_release.bat  build_flexspi_nor_release.sh  build_sign_publish.sh  clean.bat  config.cmake  config_rt1060.cmake  config_rt1170.cmake  flags.cmake  flags_rt1060.cmake  flags_rt1170.cmake
armgcc/linker/: MIMXRT1064xxxxx_flexspi_nor.ld
board_rt1060/: pin_mux.c  pin_mux.h
board_rt1170/: pin_mux.h
config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_demo_config.h  aws_iot_network_config.h  aws_mbedtls_config.h  core_http_config.h  core_mqtt_config.h  core_pkcs11_config.h  http_demo_mutual_auth_config.h  iot_config.h  iot_secure_sockets_config.h  mexido_para_gobo_aws_mbedtls_config.h  mqtt_agent_demo_config.h  ota_config.h  ota_demo_config.h
ota_flag/: sbl_ota_flag.c  sbl_ota_flag.h
provisioning/: aknano_provisioning.c  aknano_provisioning_mbedtls.c  aknano_provisioning_secret.h
tests/: aknano_test.c
